# dbt-contracts

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  INSTRUCTIONS.md  LICENSE  README.md  dbt-contracts.toml  dbt_project.yml  justfile  profiles.yml  pylock.toml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
Agents/: AGENTS.md
docs/: api.md  architecture.md  cli.md  configuration.md  contracts.md  index.md  troubleshooting.md
docs/api/: cli.md  configuration.md  contracts.md  generation.md  index.md
docs/tapes/: generate-drift.tape  interactive.tape  quickstart.tape  validate.tape
models/: customer_summary.sql  schema.yml
sources/: sources.yml
src/: main.py
src/dbt_contracts/: __init__.py  cli.py  config.py  dbt_profiles.py  interactive.py  main.py
src/dbt_contracts/commands/: config.py  generate.py  init.py  validate.py
src/dbt_contracts/generators/: __init__.py  exporter.py  metadata.py  orchestrator.py  postprocess.py  quality.py  sources.py
src/dbt_contracts/odcs/: __init__.py  parser.py  validator.py
src/dbt_contracts/odps/: __init__.py  parser.py  schema.py
src/python_minimal_boilerplate/: __init__.py  cli.py
tests/: test_cli.py  test_config.py  test_config_command.py  test_drift.py  test_exporter.py  test_main.py  test_metadata.py  test_odcs_parser.py  test_odcs_validator.py  test_odps_parser.py  test_odps_schema.py  test_orchestrator.py  test_postprocess.py  test_quality.py  test_sources.py
tests/fixtures/odcs/: customer_summary.odcs.yaml  invalid_contract.odcs.yaml  minimal_contract.odcs.yaml  simple_table.odcs.yaml  with_metadata.odcs.yaml  with_quality_rules.odcs.yaml  with_servers.odcs.yaml  with_sla.odcs.yaml
tests/fixtures/odps/: generation_product.odps.yaml  metadata_product.odps.yaml  minimal_product.odps.yaml  multi_port_product.odps.yaml  (+4 more)
