[project]
name = "python-minimal-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "logfire>=4.16.0",
]

[project.scripts]
python-minimal-boilerplate = "python_minimal_boilerplate.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.12",
    "pre-commit>=4.5.1",
    "zensical>=0.0.19",
    "pytest>=9.0.2",
    "mkdocstrings-python>=2.0.1",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true

# Enforce docstrings to generate documenation from

[tool.ruff.lint]
select = ["D", "E4", "E7", "E9", "F"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
